@@ -4,7 +4,6 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.gdg.zipte_gdg.api.controller.page.request.PageRequestDto;
 import org.gdg.zipte_gdg.api.controller.review.request.ReviewRequestDto;
-import org.gdg.zipte_gdg.api.service.comment.response.CommentResponseDto;
 import org.gdg.zipte_gdg.api.service.comment.response.CommentResponseWithReviewDto;
 import org.gdg.zipte_gdg.api.service.page.response.PageResponseDto;
 import org.gdg.zipte_gdg.api.service.review.response.ReviewResponseDto;
@@ -13,6 +12,7 @@ import org.gdg.zipte_gdg.domain.comment.Comment;
 import org.gdg.zipte_gdg.domain.member.Member;
 import org.gdg.zipte_gdg.domain.member.MemberRepository;
 import org.gdg.zipte_gdg.domain.review.Review;
+import org.gdg.zipte_gdg.domain.review.ReviewImage;
 import org.gdg.zipte_gdg.domain.review.ReviewRepository;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -21,8 +21,7 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -33,6 +32,7 @@ public class ReviewServiceImpl implements ReviewService {
 
     private final ReviewRepository reviewRepository;
     private final MemberRepository memberRepository;
+    private final ReviewImageService reviewImageService;
 
     @Override
     public ReviewResponseDto register(ReviewRequestDto reviewRequestDto) {
@@ -40,7 +40,12 @@ public class ReviewServiceImpl implements ReviewService {
         Review review = Review.addNewReview(member, reviewRequestDto.getTitle(), reviewRequestDto.getContent());
 
         Review savedReview = reviewRepository.save(review);
-        return entityToDto(savedReview);
+
+        List<String> uploads = reviewImageService.saveFiles(savedReview, reviewRequestDto.getFiles());
+        ReviewResponseDto reviewResponseDto = entityToDto(savedReview);
+        reviewResponseDto.setUploadFileNames(uploads);
+
+        return reviewResponseDto;
     }
 
     private Member getMember(ReviewRequestDto reviewRequestDto) {
@@ -52,10 +57,12 @@ public class ReviewServiceImpl implements ReviewService {
     public ReviewResponseWithCommentDto getOne(Long reviewId) {
 
         Review review = reviewRepository.findById(reviewId).orElseThrow();
+
         ReviewResponseWithCommentDto reviewResponseDto = entityToCommentDto(review);
 
-
         List<Comment> commentsWithReview = reviewRepository.findCommentsWithReview(reviewId);
+        List<ReviewImage> reviewImages = reviewRepository.selectReviewImages(reviewId);
+
 
         // 댓글을 DTO로 변환합니다.
         List<CommentResponseWithReviewDto> commentResponseDtos = commentsWithReview.stream()
@@ -64,6 +71,7 @@ public class ReviewServiceImpl implements ReviewService {
 
         // 리뷰 DTO에 댓글을 설정합니다.
         reviewResponseDto.setComments(commentResponseDtos);
+        reviewResponseDto.setUploadFileNames(reviewImages.stream().map(ReviewImage::getFileName).collect(Collectors.toList()));
 
         return reviewResponseDto;
     }
@@ -85,13 +93,20 @@ public class ReviewServiceImpl implements ReviewService {
 
         Pageable pageable = PageRequest.of(pageRequestDto.getPage()-1, pageRequestDto.getSize(), Sort.by("id").descending());
 
-        Page<Review> result = reviewRepository.findAll(pageable);
+        Page<Object[]> result = reviewRepository.selectList(pageable);
         log.info(result);
 
-        // Review 엔티티를 ReviewResponseDto로 변환
-        List<ReviewResponseDto> dtoList = result.stream()
-                .map(this::entityToDto)  // entityToDto 메서드 사용
-                .collect(Collectors.toList());
+
+        List<ReviewResponseDto> dtoList = result.get().map(arr -> {
+            Review review = (Review) arr[0];
+            ReviewImage reviewImage = (ReviewImage) arr[1];
+
+            String imageStr = (reviewImage != null) ? reviewImage.getFileName() : "No image found";
+            ReviewResponseDto dto = entityToDto(review);
+            dto.setUploadFileNames(Collections.singletonList(imageStr));
+
+            return dto;
+        }).toList();
 
         long total = result.getTotalElements();
 
@@ -106,17 +121,34 @@ public class ReviewServiceImpl implements ReviewService {
 
         Pageable pageable = PageRequest.of(pageRequestDto.getPage() - 1, pageRequestDto.getSize(), Sort.by("id").descending());
 
+        // 멤버 ID로 리뷰를 가져옴
         Page<Review> result = reviewRepository.findReviewsByMemberId(memberId, pageable);
-
         log.info(result);
 
         // Review 엔티티를 ReviewResponseDto로 변환
         List<ReviewResponseDto> dtoList = result.stream()
-                .map(this::entityToDto)  // entityToDto 메서드 사용
+                .map(this::entityToDto)  // 각 Review를 ReviewResponseDto로 변환
                 .collect(Collectors.toList());
 
-        long total = result.getTotalElements();
+        // 각 리뷰에 대한 이미지 파일 이름을 수집할 맵
+        Map<Long, List<String>> reviewImagesMap = new HashMap<>();
 
+        // 각 리뷰에 대한 이미지를 한 번에 가져옴
+        for (Review review : result) {
+            List<ReviewImage> reviewImages = reviewRepository.selectReviewImages(review.getId());
+            log.info("리뷰 ID: {}, 이미지: {}", review.getId(), reviewImages);
+
+            // 파일 이름을 맵에 저장
+            reviewImagesMap.put(review.getId(), reviewImages.stream().map(ReviewImage::getFileName).collect(Collectors.toList()));
+        }
+
+        // dtoList에 파일 이름을 업데이트
+        for (ReviewResponseDto dto : dtoList) {
+            List<String> fileNames = reviewImagesMap.get(dto.getId());
+            dto.setUploadFileNames(fileNames); // ReviewResponseDto에 setUploadFileNames 메서드가 있어야 함
+        }
+
+        long total = result.getTotalElements();
         return new PageResponseDto<>(dtoList, pageRequestDto, total);
     }
 
